Fix 'suggest' button alignment. #130

--- a/src/components/Suggest/index.scss
+++ b/src/components/Suggest/index.scss
@@ -62,6 +62,7 @@
 
   button {
     margin-top: 2rem;
+    margin-left: 0 !important;
   }
 
   .list {
